--- a/templates/base.html
+++ b/templates/base.html
@@ -3,11 +3,25 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>{% block title %}MiConcesionaria{% endblock %}</title>
+  <title>{% block title %}
+
+    MiConcesionaria
+    
+    {% endblock %}</title>
 </head>
 <body>
   <main>
     {% block content %}
+
+    <ul class="sidebar-nav">
+     {% if user.is_authenticated %}
+       <li>User: {{ user.get_username }}</li>
+       <li><a href="{% url 'logout'%}?next={{request.path}}">Logout</a></li>
+     {% else %}
+       <li><a href="{% url 'login'%}?next={{request.path}}">Login</a></li>
+     {% endif %} 
+    </ul>
+
     {% endblock %}
   </main>
 </body>
