--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,7 @@
 <!-- templates/base.html -->
 <!DOCTYPE html>
 <html lang="en">
-  <head>}
+  <head>
     {% load static %}
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
@@ -26,24 +26,26 @@
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-              <li class="nav-item"><a class="nav-link" href="">Inicio</a></li>
-              <li class="nav-item"><a class="nav-link" href="ManageCompany/">Administrar Compañía</a></li>
-              <li class="nav-item"><a class="nav-link" href="admin/">Admin</a></li>
+              <li class="nav-item"><a class="nav-link" href="/">Inicio</a></li>
+              <li class="nav-item"><a class="nav-link" href="/ManageCompany/">Administrar Compañía</a></li>
+              {% if user.username == 'mbracho' %}
+              <li class="nav-item"><a class="nav-link" href="/admin/">Admin</a></li>
+              {% endif %}
+              {% if user.is_authenticated %}
+                <li class="nav-item"><a class="nav-link" href="{% url 'logout' %}">Salir</a></li>
+              {% else %}
+                <li class="nav-item"><a class="nav-link" href="{% url 'login' %}">Acceder</a></li>
+              {% endif %}
+
             </ul>
           </div>
         </div>
       </nav>
 
       {% block content %}
-        <ul class="sidebar-nav">
-        {% if user.is_authenticated %}
-          <li>User: {{ user.get_username }}</li>
-          <li><a href="{% url 'logout'%}?next={{request.path}}">Logout</a></li>
-        {% else %}
-          <li><a href="{% url 'login'%}?next={{request.path}}">Login</a></li>
-        {% endif %} 
-        </ul>
+
       {% endblock %}
+      
     <main>
     <!-- Footer-->
     <footer class="bg-dark py-4 mt-auto">
