--- a/templates/home.html
+++ b/templates/home.html
@@ -4,11 +4,12 @@
 {% block title %}Home{% endblock %}
 
 {% block content %}
-{% if user.is_authenticated %}
-  Hi {{ user.username }}!
-  <p><a href ="{% url 'logout' %}">Log Out</a></p>
-{% else %}
-  <p>You are not logged in</p>
-  <a href="{% url 'login' %}">Log In</a>
-{% endif %}
+  {% if user.is_authenticated %}
+    <p>Hola {{ user.username }}!</p>
+    <p>Bienvenido a MiConcesionario</p>
+    La plataforma de gestión de concesionarios de vehículos por excelencia en la República Argentina!
+  {% else %}
+    <p>No has hecho Login!</p>
+    <p>Por favor accede desde el menu superior.</p>
+  {% endif %}
 {% endblock %}
