--- a/templates/base.html
+++ b/templates/base.html
@@ -28,15 +28,14 @@
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
               <li class="nav-item"><a class="nav-link" href="/">Inicio</a></li>
               <li class="nav-item"><a class="nav-link" href="/ManageCompany/">Administrar Compañía</a></li>
-              {% if user.username == 'mbracho' %}
-              <li class="nav-item"><a class="nav-link" href="/admin/">Admin</a></li>
-              {% endif %}
-              {% if user.is_authenticated %}
-                <li class="nav-item"><a class="nav-link" href="{% url 'logout' %}">Salir</a></li>
-              {% else %}
-                <li class="nav-item"><a class="nav-link" href="{% url 'login' %}">Acceder</a></li>
-              {% endif %}
-
+                {% if user.username == 'mbracho' %}
+                  <li class="nav-item"><a class="nav-link" href="/admin/">Admin</a></li>
+                {% endif %}
+                {% if user.is_authenticated %}
+                 <li class="nav-item"><a class="nav-link" href="{% url 'logout' %}">Salir</a></li>
+                {% else %}
+                  <li class="nav-item"><a class="nav-link" href="{% url 'login' %}">Acceder</a></li>
+                {% endif %}
             </ul>
           </div>
         </div>
@@ -65,7 +64,7 @@
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Core theme JS-->
-    <script src="js/scripts.js"></script>
+    <script src="{% static 'js/scripts.js' %}"></script>
     <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
     <!-- * *                               SB Forms JS                               * *-->
     <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
